update demo+events+parallel